# GrowAssistant-Bridge

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  config.example.yaml  config.yaml  install.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup-dev.sh  setup.sh  tailwind.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  tests.yml
app/: __init__.py  api_client.py  api_types.py  auth.py  automations.py  config.py  config_store.py  constants.py  entity_id.py  main.py  mqtt_transport.py  queue_manager.py  registry.py  types.py  watchdog.py
app/automations/: __init__.py  engine.py  event_bus.py  executor.py  manager.py  state_store.py  templates.py
app/integrations/: __init__.py  manifest.py
app/integrations/camera/: __init__.py  camera.py
app/integrations/esphome/: __init__.py  esphome.py
app/integrations/gpio/: __init__.py  gpio.py
app/integrations/http/: __init__.py  http.py
app/integrations/mqtt/: __init__.py  mqtt.py
app/integrations/serial/: __init__.py  serial.py
app/schemas/: __init__.py  config_schemas.py
app/utils/: __init__.py  http_utils.py  sensitive_data.py  singleton.py  validation.py
data/: credentials.json.bak
docs/: bridge-protocol.md  custom_integrations.md  developer_guide.md
external_integrations/: README.md  climate_control.py  dht_config.yaml  dht_sensor.py  sample_config.yaml  sample_integration.py  simulator.py
tests/: __init__.py  conftest.py  test_api_client.py  test_api_types.py  test_auth.py  test_auth_pairing.py  test_automation_engine.py  test_automation_executor.py  test_automation_templates.py  test_automations.py  test_config.py  test_config_schemas.py  test_config_store.py  test_entity_id.py  test_event_bus.py  test_integrations.py  test_main.py  test_manifest.py  test_manifest_mqtt.py  test_mqtt_transport.py  test_queue_manager.py  test_registry.py  test_sensitive_data.py  test_state_store.py  test_telemetry_contract.py  test_utils.py  test_watchdog.py  test_web_app.py
tests/integrations/: __init__.py  test_camera.py
web/: __init__.py  app.py
web/static/css/: custom.css  tailwind.built.css
web/static/js/: app.js  dashboard.js  onboarding.js  sidebar.js
web/templates/: base.html  config.html  error.html  index.html  login.html  onboarding.html  setup.html
web/templates/partials/: _header.html  _sidebar.html
